[tvOS] Unable to start camera via getUserMedia https://bugs.webkit.org/show_bug.cgi?id=276804 rdar://131596698

Reviewed by Tim Horton.

Two issues prevented us from starting continuity camera on tvOS:
1. `AVCaptureSessionSetAuthorizedToUseCameraInMultipleForegroundAppLayout()` is not available on
   tvOS, preventing us from using the camera in multi-app layouts.
2. `MediaSessionManageriOS::providePresentingApplicationPID()` was not called when starting camera
   capture.

Addressed (1) by calling `-[AVCaptureSession setMultitaskingCameraAccessEnabled:]` instead, which
is available on tvOS. Addressed (2) by adjusting an `#ifdef` to include tvOS.

* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setupSession):
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:

Canonical link: https://commits.webkit.org/281123@main